Pre tag causing horizontal scroll to appear - test fix

--- a/datastructures/style.css
+++ b/datastructures/style.css
@@ -100,8 +100,8 @@ header{
     	margin: 0px;
     	width: fit-content;
     }
+    pre{
+    	display: none;
+    }
 
-    pre {
-	    max-width: 80%;
-	}
 }
